# RChhetri-2026A

./: .dockerignore  .gitignore  .readthedocs.yaml  Makefile  README.md  docker-compose-local.yaml  docker-compose.yaml  example.prefect.toml  mkdocs.yaml  mkdocs.yml  pyproject.toml
container/: base.Dockerfile  casa_config.py  docker-compose-local.yaml  docker-compose-prefect-remote.yaml  docker-compose.yaml  needle.Dockerfile  worker.Dockerfile
docs/: cli_entrypoints.md  configuration.md  decisions.md  gen_api_pages.py  gen_entrypoints.py  index.md  installation_and_setup.md  module_entrypoints.md  needle-module.md  pipeline_reference.md  triggering_setup.md
docs/needle-dev/: design.md  overview.md  project-structure.md
docs/needle_development/: adr.md  decisions.md  design.md  event_driven_architecture.md  overview.md  project_structure.md
docs/stylesheets/: extra.css
needle/: README.md  check_config.py  cli.py  deploy.py  download_casadata.py  run.py  validate_config.py
needle/config/: base.py  beam.py  calibrate.py  clean.py  cluster.py  container.py  data.py  flag.py  mask.py  pipeline.py  source_find.py  watcher.py
needle/flows/: courier.py  pipeline.py  watcher.py
needle/lib/: aegean.py  casa.py  cluster_local.py  cluster_slurm.py  config.py  datasource.py  events.py  flow.py  logging.py  sif_task_runner.py  slurm_cluster.py  units.py  validate.py
needle/models/: base.py  calibrate.py  clean.py  flag.py  mask.py  pipeline.py  source_find.py
needle/modules/: beam.py  calibrate.py  casa_data.py  clean.py  convert.py  convert_to_ms.py  diagnostics.py  flag.py  inspect.py  inspect_ms.py  mask.py  needle_context.py  source_find.py  watcher.py
needle/tasks/: beam.py  calibrate.py  casa_data.py  clean.py  convert.py  diagnostics.py  flag.py  inspect.py  mask.py  source_find.py  utils.py
tests/: test_config_base.py  test_config_beam.py  test_config_cluster.py  test_config_container.py  test_config_data.py  test_config_pipeline.py  test_lib_aegean.py  test_lib_config.py  test_lib_datasource.py  test_lib_events.py  test_lib_flow.py  test_lib_logging.py  test_lib_sif_task_runner.py  test_lib_units.py  test_lib_validate.py  test_modules_beam.py  test_modules_calibrate.py  test_modules_casa_data.py  test_modules_clean.py  test_modules_context.py  test_modules_convert.py  test_modules_diagnostics.py  test_modules_flag.py  test_modules_inspect_ms.py  test_modules_mask.py  test_modules_source_find.py  test_modules_watcher.py
