[project]
name = "needle" 
version = "0.1.0"
description = "Pipeline for ASKAP data imaging and point-source detection" 
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aegeantools>=2.3.5",
    "astropy>=7.2.0",
    "dask-jobqueue>=0.9.0",
    "prefect>=3.0.0",
    "prefect-dask>=0.3.6",
    "prefect-docker>=0.7.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
tests = ["pytest>=9,<10"]
casa = [
    "casatasks>=6.7",
    "casatools>=6.7",
]

[project.scripts]
needle-inspect-ms = "needle.modules.inspect_ms:main"
needle-convert= "needle.modules.convert:main"
needle-flag = "needle.modules.flag:main"
needle-calibrate= "needle.modules.calibrate:main"
needle-clean= "needle.modules.clean:main"
needle-clean-shallow= "needle.modules.clean:shallow"
needle-clean-deep= "needle.modules.clean:deep"
needle-clean-subtract= "needle.modules.clean:model_subtract"
needle-mask= "needle.modules.mask:main"
needle-source-find= "needle.modules.source_find:main"
needle-deploy = "needle.cli:deploy"
needle-serve = "needle.cli:serve"
needle-run= "needle.cli:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["needle"]

[tool.pyright]
typeCheckingMode = "off"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type Swig.*has no __module__:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__:DeprecationWarning",
]
