[project]
name = "needle" 
version = "0.1.0"
description = "Pipeline for ASKAP data imaging and point-source detection" 
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "aegeantools>=2.3.5",
    "astropy>=7.2.0",
    "boto3>=1.43.5",
    "dask-jobqueue>=0.9.0",
    "matplotlib>=3.10.8",
    "prefect>=3.0.0",
    "prefect-dask>=0.3.6",
    "prefect-docker>=0.7.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
tests = ["pytest>=9,<10"]
casa = [
    "casatasks>=6.7",
    "casatools>=6.7",
]
docs = [
    "mkdocs==1.6.1", # Pinned for good reason. MkDocs unmaintained
    "mkdocs-gen-files>=0.6.1", 
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[project.scripts]
needle-serve = "needle.cli:needle_serve"
needle-run= "needle.cli:run"
needle-validate= "needle.cli:validate_config"
needle-inspect= "needle.modules.inspect:main"
needle-diagnostics= "needle.modules.diagnostics:main"
needle-convert= "needle.modules.convert:main"
needle-flag = "needle.modules.flag:main"
needle-calibrate= "needle.modules.calibrate:main"
needle-source-find= "needle.modules.source_find:main"
needle-mask= "needle.modules.mask:main"
needle-clean= "needle.modules.clean:main"
needle-casadata= "needle.modules.casa_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["needle"]

[tool.pyright]
typeCheckingMode = "off"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type Swig.*has no __module__:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__:DeprecationWarning",
]
